Avance exautivo primer prototipo de la app busqueda de pokemos y seleccion para ver stacks descripcion y demas diseno base

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- ConstraintLayout como el contenedor raíz para un diseño flexible. -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F0F0F0"
-    tools:context=".MainActivity"> <!-- Asegúrate que 'tools:context' apunte a tu MainActivity -->
+    tools:context=".MainActivity">
 
-    <!-- EditText para la barra de búsqueda de Pokémon por nombre. -->
     <EditText
         android:id="@+id/etPokemonName"
         android:layout_width="0dp"
@@ -24,7 +22,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Botón para iniciar la búsqueda. -->
     <Button
         android:id="@+id/btnSearch"
         android:layout_width="wrap_content"
@@ -38,7 +35,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/etPokemonName" />
 
-    <!-- RecyclerView para mostrar la lista de Pokémon. -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPokemons"
         android:layout_width="0dp"
@@ -51,9 +47,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etPokemonName"
-        tools:listitem="@layout/item_pokemon_card" /> <!-- Vista previa de los items -->
+        tools:listitem="@layout/item_pokemon_card" />
 
-    <!-- ProgressBar para indicar el estado de carga. -->
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
@@ -65,7 +60,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Button para cargar Pokemones iniciales -->
     <Button
         android:id="@+id/btnLoadInitial"
         android:layout_width="wrap_content"
@@ -77,6 +71,6 @@
         app:layout_constraintTop_toBottomOf="@+id/etPokemonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="gone" tools:visibility="visible" /> <!-- Inicialmente gone, puedes hacerlo visible para probar -->
+        android:visibility="gone" tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
